	   - findLink()
	   - findFunction
	   - findEnum
	   - findChannelType
	   - findNetworkType()
	   - findModuleType()
	    findModuleType() left for compatibility

	- cModuleType::buildInside(mod) became protected (was deprecated anyway)

	- cModule: deprecated methods phase(), setPhase() removed

	- removed writeContents() altogether

	- snapshot file became XML

	- deprecated cSubmodIterator -- use cModule::SubmoduleIterator instead! cModule::ChannelIterator also added

	- cSimpleModule::end() -- removed, as there was little value in it. To terminate
	  an activity() module, simply return from the activity() method, or call the new
	  halt() method to end the module while preserving the local variables for inspection.

	- added cSimpleModule::halt()

	- cSimpleModule::deleteModule() -- in handleMessage()-based modules, this no longer
	  throws exception. That is, execution will continue normally after the deleteModule() call.

	- removed cSimpleModule::moduleState()

	- covariant return types for dup(). This might cause incompatibility with customized message
	  classes (.msg file with customize=true). The hand-coded class still contains cPolymorphic*
	  return type not the real class type, which results in error messages like:
	     ../Transport\TCP\TCPSegment.h(68) : error C2555: 'TCPSegment::dup': overriding virtual function
	     return type differs and is not covariant from 'TCPSegment_Base::dup'
	  Fix: change dup()'s return type to the real class.

	- several internal classes got removed/reorganized

	- cPar: new method stdstringValue() / operator std::string: this must be used with "volatile string" params

	- cPacket removed

	- cStringTokenizer: added asIntVector() and asDoubleVector() methods; TODO testing

	- cXMLElement, xmldoc(): mini-XPath expressions made more tolerant to whitespace

	Configuration handling rewritten, including cConfiguration.

	Run number handling:
	- run numbers made entrirely the matter of cEnvir. cSimulation::runNumber()