@@ -52,7 +52,7 @@ class SIM_API stdstring : public std::string
 
 
 /**
- * Wrap std::vector<stdtring> templated class into an equivalent non-templated class.
+ * Wrap std::vector\<stdtring\> templated class into an equivalent non-templated class.
  * Motivation: see description at stdstring.
  */
 class SIM_API stdstringvector : public std::vector<stdstring>
@@ -65,7 +65,7 @@ class SIM_API stdstringvector : public std::vector<stdstring>
 };
 
 /**
- * Wrap std::vector<const char *> templated class into an equivalent non-templated class.
+ * Wrap std::vector\<const char *\> templated class into an equivalent non-templated class.
  * Motivation: see description at stdstring.
  */
 class SIM_API stdcharpvector : public std::vector<const char *>
